# Robot_Lamp

./: README.md  main.py  motor_driver_temp.ino
cplusplus/: CMakeLists.txt
cplusplus/arduino/: control.ino
cplusplus/src/: led_control.cpp  object_detection.cpp
robot_arm/: inverse_kinematics.py  motor_control.py
sensors/: camera.py  temp_sensor.py
utils/: config.py
vision/: object_detection.py  tracking.py
